// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`block instruction compiler > emits a typed block for float 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 4,
      "expectedResultTypes": [
        "float",
      ],
    },
  ],
  "byteCode": [
    2,
    125,
  ],
}
`;

exports[`block instruction compiler > emits a typed block for int 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 4,
      "expectedResultTypes": [
        "int",
      ],
    },
  ],
  "byteCode": [
    2,
    127,
  ],
}
`;

exports[`block instruction compiler > emits a void block when no result type is declared 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 4,
      "expectedResultTypes": [],
    },
  ],
  "byteCode": [
    2,
    64,
  ],
}
`;
